# kunuz-clone

./: README.md  pyproject.toml
accounts/: admin.py  email_send.py  manager.py  models.py  tests.py
accounts/api_endpoints/: urls.py
accounts/api_endpoints/LoginSession/: jwt_serializers.py  jwt_views.py  views.py
accounts/api_endpoints/LogoutSession/: views.py
accounts/api_endpoints/Register/: serializers.py  views.py
accounts/migrations/: 0001_initial.py
common/: admin.py  models.py  tasks.py
common/migrations/: 0001_initial.py
core/: settings.py  urls.py
locale/ru/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
news/: admin.py  models.py  tasks.py  translation.py
news/api_endpoints/: serializers.py  urls.py  views.py
news/api_endpoints/category/: serializers.py  views.py
news/api_endpoints/comment/: serializers.py  views.py
news/api_endpoints/mediafile/: serializers.py  views.py
news/api_endpoints/news/: views.py
news/api_endpoints/tag/: serializers.py  views.py
news/migrations/: 0001_initial.py  0002_news_publish_at.py
