[project]
name = "kunuz-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap4>=2025.6",
    "django>=5.2.3",
    "django-celery-beat>=2.8.1",
    "django-jazzmin>=3.0.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-yasg>=1.21.10",
    "modeltranslation>=0.25",
    "nltk>=3.9.1",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "rosetta>=0.3",
    "scipy>=1.16.0",
]
